align issue causing overflow

--- a/src/css/PhDemoJS.css
+++ b/src/css/PhDemoJS.css
@@ -22,8 +22,7 @@
 
 #graph{
   overflow: hidden;
-  padding-left: 20px;
-  align-content: flex-end;
+  padding-left: 10px;
 
 }
 #interactions{
